@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.1052 2011-05-25 21:12:00 guru Exp $
+	$Id: ChangeLog,v 1.1053 2011-05-25 21:59:49 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2011-05-25	remko
@@ -9,6 +9,7 @@
 2011-05-25	pwessel
 	* grdblend_func.c:	Fixed read error in info file, and the phase check.
 				Added blend.sh script to test suite.
+				Needed better longitude test to determine overlap.
 	* grdinfo_func.c:	Needed to free grid between files to reset header.
 				Improved selecting correct lon-range formatting.
 	* spotter/grdrotator_func.c:	Ensure output has same grid spacing.
